# actix-file-transfer

./: Cargo.toml  cert.pem  key.pem
frontend/: package-lock.json  package.json
frontend/src/: App.js  styled-components.jsx
frontend/src/protected/: download-file.jsx  main.jsx  upload-file.jsx
src/: main.rs
src/extractors/: authentication_token.rs
src/middleware/: mod.rs  protect.rs
src/scopes/: user.rs
static/: index_bundle.js
