[package]
name = "actix-file-transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = "0.4.31"
jsonwebtoken = "9.2.0"
serde = { version = "1.0", features = ["derive"] }
uuid = {version="1.6.1", features=["v4"]}
