[package]
name = "actix-file-transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-web = {version = "4.4.0", features = ["openssl"]}
chrono = "0.4.31"
futures-util = "0.3.29"
jsonwebtoken = "9.2.0"
openssl = "0.10.61"
serde = { version = "1.0", features = ["derive"] }
uuid = {version="1.6.1", features=["v4"]}
